<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/titlesample"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/titlesample"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/datesample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datesample"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="@+id/titlesample"
        app:layout_constraintTop_toBottomOf="@+id/titlesample" />

    <TextView
        android:id="@+id/contentsample"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/contentsample"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="@+id/titlesample"
        app:layout_constraintStart_toStartOf="@+id/titlesample"
        app:layout_constraintTop_toBottomOf="@+id/datesample" />
</androidx.constraintlayout.widget.ConstraintLayout>